export interface Concello {
  id: number
  nombre: string
}
