Table "concellos" {
  "id" INT [pk, increment]
  "nombre" VARCHAR(500) [not null]
}

Table "especialidades" {
  "id" TINYINT [pk, increment]
  "nombre" VARCHAR(500) [not null]
}

Table "estados_alumnos" {
  "id" TINYINT [pk, increment]
  "nombre" VARCHAR(500) [not null]
}

Table "roles_usuarios" {
  "id" TINYINT [pk, increment]
  "nombre" VARCHAR(500) [not null]
}

Table "alumnos" {
  "id" BIGINT [pk, increment]
  "dni_nie" VARCHAR(500)
  "nombre" VARCHAR(500) [not null]
  "apellidos" VARCHAR(500) [not null]
  "email" VARCHAR(500) [not null]
  "telefono" VARCHAR(500) [not null]
  "concello_id" INT [not null]
  "numero_seguridad_social" VARCHAR(500)
  "estado_id" TINYINT [not null]
  "tutor_centro_id" BIGINT [not null]

  Indexes {
    dni_nie [unique, name: "idx_alumnos_dni_nie"]
    numero_seguridad_social [unique, name: "idx_alumnos_numero_seguridad_social"]
  }
}

Table "correos" {
  "id" BIGINT [pk, increment]
  "fecha" DATE [not null]
  "usuario_id" BIGINT [not null]
  "empresa_id" BIGINT [not null]
  "curso_academico" VARCHAR(50) [not null]
}

Table "cursos" {
  "id" SMALLINT [pk, increment]
  "codigo" VARCHAR(20) [not null]
  "nombre" VARCHAR(500) [not null]
  "especialidad_id" TINYINT [not null]

  Indexes {
    codigo [unique, name: "idx_cursos_codigo"]
  }
}

Table "empresas" {
  "id" BIGINT [pk, increment]
  "nombre" VARCHAR(500) [not null]
  "concello_id" INT [not null]
  "direccion" VARCHAR(500) [not null]
  "observaciones" TEXT
  "especialidad_id" TINYINT [not null]
  "contacto_nombre" VARCHAR(500)
  "contacto_email" VARCHAR(500)
  "contacto_telefono" VARCHAR(500)
  "activa" BOOLEAN [not null]
  "plazas" SMALLINT [default: 0]
}

Table "skills" {
  "id" INT [pk, increment]
  "nombre" VARCHAR(500) [not null]
  "especialidad_id" TINYINT [not null]
}

Table "tutores_centro" {
  "id" BIGINT [pk, increment]
  "nombre" VARCHAR(500) [not null]
  "apellidos" VARCHAR(500) [not null]
  "usuario_id" BIGINT
  "email" VARCHAR(500) [not null]
  "curso_id" SMALLINT
  "activo" BOOLEAN [not null]

  Indexes {
    email [unique, name: "idx_tutores_centro_email"]
  }
}

Table "tutores_empresa" {
  "id" BIGINT [pk, increment]
  "empresa_id" BIGINT [not null]
  "nombre" VARCHAR(500) [not null]
  "apellidos" VARCHAR(500) [not null]
  "email" VARCHAR(500) [not null]
  "telefono" VARCHAR(500) [not null]
}

Table "usuarios" {
  "id" BIGINT [pk, increment]
  "email" VARCHAR(500) [not null]
  "password" VARCHAR(500) [not null]
  "rol_id" TINYINT [not null]
  "activo" BOOLEAN [not null]

  Indexes {
    email [unique, name: "idx_usuarios_email"]
  }
}

Table "empresas_skills" {
  "empresa_id" BIGINT [not null]
  "skill_id" INT [not null]

  Indexes {
    (empresa_id, skill_id) [pk]
  }
}

Table "fct" {
  "id" BIGINT [pk, increment]
  "alumno_id" BIGINT [not null]
  "tutor_empresa_id" BIGINT [not null]
  "fecha_inicio" DATE [not null]
  "fecha_fin" DATE
}

Ref "fk_alumnos_concello":"concellos"."id" < "alumnos"."concello_id"

Ref "fk_alumnos_estado_alumnos":"estados_alumnos"."id" < "alumnos"."estado_id"

Ref "fk_alumnos_tutor_centro":"tutores_centro"."id" < "alumnos"."tutor_centro_id"

Ref "fk_correos_empresa":"empresas"."id" < "correos"."empresa_id"

Ref "fk_cursos_especialidad":"especialidades"."id" < "cursos"."especialidad_id" [delete: cascade]

Ref "fk_correos_usuario":"usuarios"."id" < "correos"."usuario_id"

Ref "fk_empresas_concello":"concellos"."id" < "empresas"."concello_id"

Ref "fk_empresas_especialidad":"especialidades"."id" < "empresas"."especialidad_id"

Ref "fk_empresas_skills_empresa":"empresas"."id" < "empresas_skills"."empresa_id" [delete: cascade]

Ref "fk_empresas_skills_skill":"skills"."id" < "empresas_skills"."skill_id" [delete: cascade]

Ref "fk_fct_alumno":"alumnos"."id" < "fct"."alumno_id" [delete: cascade]

Ref "fk_fct_tutor_empresa_id":"tutores_empresa"."id" < "fct"."tutor_empresa_id" [delete: cascade]

Ref "fk_skills_especialidad":"especialidades"."id" < "skills"."especialidad_id"

Ref "fk_tutor_centro_curso":"cursos"."id" < "tutores_centro"."curso_id"

Ref "fk_tutor_centro_usuario_id":"usuarios"."id" - "tutores_centro"."usuario_id"

Ref "fk_tutores_empresa":"empresas"."id" < "tutores_empresa"."empresa_id" [delete: cascade]

Ref "fk_usuarios_rol":"roles_usuarios"."id" < "usuarios"."rol_id"
